# mexMemory

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
docs/html/: annotated.html  classes.html  classmemory_1_1ref_counting_1_1_control_block-members.html  classmemory_1_1ref_counting_1_1_control_block.html  classmemory_1_1ref_counting_1_1_ref-members.html  classmemory_1_1ref_counting_1_1_ref.html  classmemory_1_1ref_counting_1_1_reference_base-members.html  classmemory_1_1ref_counting_1_1_reference_base.html  classmemory_1_1ref_counting_1_1_weak_ref-members.html  classmemory_1_1ref_counting_1_1_weak_ref.html  control_block_8h_source.html  dir_1a4c6f625b5ccebf0040a4693808e0bb.html  dir_3b7bf56b3f067e05660c0ca7f61458a0.html  dir_3f874c22582bf8644a863ec463be6084.html  dir_90ac95611a650c7df65412033af1c6af.html  dir_96eef1e819fb641dd72112a2a789886b.html  dir_a7acb14cd90aa8911a4f75e1904b0504.html  dir_d522931ffa1371640980b621734a4381.html  dir_d9843df695146384b43f8fda43c46c76.html  files.html  forward_decl_8h_source.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  hierarchy.html  index.html  memory_8h_source.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacememory.html  namespacememory_1_1ref_counting.html  namespaces.html  reference_8h_source.html  strong_reference_8h_source.html  struct_test_object-members.html  struct_test_object.html  structmemory_1_1ref_counting_1_1_debug_config-members.html  structmemory_1_1ref_counting_1_1_debug_config.html  (+6 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_d.js  all_e.js  classes_0.js  (+20 more)
docs/latex/: annotated.tex  classmemory_1_1ref_counting_1_1_control_block.tex  classmemory_1_1ref_counting_1_1_ref.eps  classmemory_1_1ref_counting_1_1_ref.tex  classmemory_1_1ref_counting_1_1_reference_base.tex  classmemory_1_1ref_counting_1_1_weak_ref.eps  classmemory_1_1ref_counting_1_1_weak_ref.tex  control_block_8h_source.tex  files.tex  forward_decl_8h_source.tex  hierarchy.tex  memory_8h_source.tex  namespacememory.tex  namespacememory_1_1ref_counting.tex  namespaces.tex  reference_8h_source.tex  refman.tex  strong_reference_8h_source.tex  struct_test_object.tex  structmemory_1_1ref_counting_1_1_debug_config.tex  structmemory_1_1ref_counting_1_1_default_allocator.tex  structmemory_1_1ref_counting_1_1_default_allocator_3_01_t_0f_0e_4.tex  utilities_8h_source.tex  weak_reference_8h_source.tex
include/memory/: memory.h
tests/: testAllocRef.cpp  testAllocationMap.cpp  testControlBlock.cpp  testDefaultAllocator.cpp  testDefaultAllocatorWithRef.cpp  testEnhancedFeatures.cpp  testIntegration.cpp  testPointerCasting.cpp  testStrongReference.cpp  testUtilities.cpp  testWeakReference.cpp
(+10 files in other folders)
